--- a/FriendLetter/Views/Home/Form.cshtml
+++ b/FriendLetter/Views/Home/Form.cshtml
@@ -12,6 +12,8 @@
      <input id="sender" name="sender" type="text">
      <label for="recipient">Recipient's Name</label>
      <input id="recipient" name="recipient" type="text">
+    <label for="gift">Gift to bring back</label>
+     <input id="gift" name="gift" type="text">
      <button type="submit">Go!</button>
     </form>
   </body>
